@@ -2,6 +2,8 @@ $Id$
 
 2014-12-06  Christian Franke  <franke@computer.org>
 
+	Makefile.am: Add quotes to parameters of INSTALL commands to allow path
+	names with spaces (this is supported since automake 1.8).
 	update-smart-drivedb.in: Add quotes to SMARTCTL variable (ticket #502).
 
 2014-11-30  Christian Franke  <franke@computer.org>
